iptables_rules
-P INPUT ACCEPT
-P FORWARD ACCEPT
-P OUTPUT ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#add this line
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
#add this line
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

-A INPUT -j REJECT --reject-with icmp-host-prohibited
#next two lines are for client and only for reference
-A FORWARD -d 10.8.0.6/32 -i tun0 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 10.8.0.6/32 -i tun0 -o tun0 -j ACCEPT
#add this line
-A FORWARD -i tun0 -o tun0 -j REJECT --reject-with icmp-port-unreachable
#add this line
-A OUTPUT -p udp -m udp --sport 1194 -j ACCEPT
